End of design, next step end the about-me text

--- a/index.html
+++ b/index.html
@@ -120,9 +120,63 @@
                     </div>
                 </div>
             </div>
+            <div class="projects-section" id="projects">
+                <div class="header-sect">
+                    <p><span class="purple">#</span>projects</p>
+                    <hr>
+                    <a href="https://github.com/VicentePM"><img src="./src/img/github-flecha.png" alt="LinkedIn"></a>
+                </div>
+                <div class="projects">
+                    <div class="project">
+                        <img src="./src/img/img-calc-puzzle.jpg" alt="La imagen no se ha podido cargar">
+                        <div class="text">
+                            <h3 class="title purple">Calculadora y Puzzle</h3>
+                            <h4 class="description">Calculadora y un sliding puzzle hecho para Ios con <span
+                                    class="purple">SwiftUI</span> y <span class="purple">Storyboard</span></h4>
+                            <a href="" class="purple link">Ver mas</a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img src="./src/img/img-hogwarts.jpg" alt="La imagen no se ha podido cargar">
+                        <div class="text">
+                            <h3 class="title purple">Hogwarts App</h3>
+                            <h4 class="description">Recoleccion de datos de una api de Harry Potter e implantacion
+                                en interfaz de <span class="purple">Android</span> con <span
+                                    class="purple">Kotlin</span></h4>
+                            <a href="" class="purple link">Ver mas</a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img src="./src/img/img-api.jpg" alt="La imagen no se ha podido cargar">
+                        <div class="text">
+                            <h3 class="title purple">Api Ciudades</h3>
+                            <h4 class="description">Creacion de una api basica con <span class="purple">Spring
+                                    Boot</span></h4>
+                            <a href="" class="purple link">Ver mas</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-me" id="contact-me">
+                <div class="header-sect">
+                    <p><span class="purple">#</span>contact-me</p>
+                    <hr>
+                </div>
+                <h2>¿En que puedo ayudarte?</h2>
+                <div class="contact-form">
+                    <form method="post" class="cta-form" id="cta-form">
+                        <input type="text" name="name" id="form-name" placeholder="Nombre" autocomplete="off">
+                        <input type="text" name="email" id="form-email" placeholder="Email" autocomplete="off">
+                        <textarea name="message" id="form-message" placeholder="Mensaje"></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
         </main>
+        <footer>
+            <h4>Vicente Pedraza &#169</h2>
+        </footer>
     </div>
-
     <!-- <script src="./js/script.js"></script> -->
 </body>
 
